--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
-  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/ask", "dest": "/index.js" }]
+  "routes": [
+    { "src": "/api/chat", "dest": "/api/index.js" }
+  ]
 }
